[bugfix/22121] adjust desktop  scrollbar

--- a/sass/header/vtex.store-drawer.scss
+++ b/sass/header/vtex.store-drawer.scss
@@ -52,6 +52,20 @@
 }
 .drawerContent--drawer-desktop {
   height: 100vh;
+
+  &::-webkit-scrollbar {
+    width: 6px;
+    border-radius: 3px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+    border-radius: 3px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: #B8B8B8;
+    border-radius: 3px;
+  }
 }
 
 .drawerContent--drawer-mobile {
@@ -96,20 +110,11 @@
     margin-top: 50px;
     overflow-x: hidden;
     margin-right: 16px;
-
-    &::-webkit-scrollbar {
-      width: 6px;
-      border-radius: 3px;
-    }
-
-    &::-webkit-scrollbar-track {
-      background-color: #B8B8B8;
-      border-radius: 3px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background-color: #291660;
-      border-radius: 3px;
+    @include mobile {
+      &::-webkit-scrollbar-thumb {
+        background-color: #291660;
+        border-radius: 3px;
+      }
     }
   }
 }
